# pyxero

./: .gitignore  .pre-commit-config.yaml  .travis.yml  ChangeLog.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build_status.yml  ci.yml  pre-commit-update.yml  publish.yml  release.yml
examples/: add_receipts.py  receipts.csv  xero_report_sample.ipynb
examples/partner_oauth_flow/: README.md  index.html  runserver.py  verified.html
examples/public_oauth_flow/: README.md  index.html  runserver.py  verified.html  verify.html
examples/receipts_importer/: receipts.csv  receipts.py
src/xero/: __init__.py  api.py  auth.py  basemanager.py  constants.py  exceptions.py  filesmanager.py  manager.py  paymentmanager.py  payrollmanager.py  projectmanager.py  utils.py
tests/: __init__.py  allocationsmanager.py  auth.py  exceptions.py  helpers.py  manager.py  mock_data.py  paymentmanager.py  test_auth.py  test_exceptions.py  test_filesmanager.py  test_manager.py  test_paymentmanager.py  test_utils.py  utils.py
utils/get_oauth2_credentials/: .gitignore  README.md  authenticate.py
utils/get_oauth2_credentials/templates/: base.html  example.py.template  form.html.template  success.html  success.html.template  tenant.html
xero/: __init__.py  allocationsmanager.py  api.py  auth.py  bankfeedsmanager.py  basemanager.py  constants.py  exceptions.py  filesmanager.py  manager.py  oauth2.py  optionsmanager.py  payrollmanager.py  projectmanager.py  report_wrapper.py  trackingcategoryoptionsmanager.py  utils.py
