[build-system]
requires = [
    "setuptools==80.9.0",
    "setuptools_scm==9.2.0",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "pyxero"
description = "Python API for accessing the REST API of the Xero accounting tool."
readme = "README.md"
requires-python = ">= 3.9"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name="Russell Keith-Magee", email = "russell@keith-magee.com"},
]
maintainers = [
    {name="Russell Keith-Magee", email = "russell@keith-magee.com"},
]
keywords = [
    "xero",
    "api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "requests >= 1.1.0, < 3",
    "requests-oauthlib >= 0.3.0, < 3",
    "python-dateutil>=2.8, < 3",
    "PyJWT >= 1.6.4, < 3",  # This is required as part of oauthlib but doesn't seem to get included sometimes.
    "cryptography>=1.3.1",  # As above, but fixes issue with missing module imports not picked up for some reason.
]

[project.optional-dependencies]
# Extras used by developers *of* briefcase are pinned to specific versions to
# ensure environment consistency.
dev = [
    "pre-commit == 4.3.0",
    "pytest == 8.4.1",
    "tox == 4.28.4",
]

[project.urls]
Homepage = "https://github.com/freakboy3742/pyxero"
Tracker = "https://github.com/freakboy3742/pyxero/issues"
Source = "https://github.com/freakboy3742/pyxero"

[tool.setuptools_scm]
# We're not doing anything Python-related at the root level of the repo, but if this
# declaration isn't here, tox commands run from the root directory raise a warning that
# pyproject.toml doesn't contain a setuptools_scm section.

[tool.pytest.ini_options]
testpaths = "tests"

[tool.isort]
profile = "black"
skip_glob = [
    "venv*",
    "local",
]
multi_line_output = 3
