[metadata]
name = pyxero
version = attr: xero.__version__
url = http://github.com/freakboy3742/pyxero
author = Russell Keith-Magee
author_email = russell@keith-magee.com
maintainer = Russell Keith-Magee
maintainer_email = russell@keith-magee.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Financial :: Accounting
license = New BSD
license_files =
    = LICENSE
description = Python API for accessing the REST API of the Xero accounting tool.
long_description = file: README.md
long_description_content_type= text/markdown

[options]
zip_safe = False
packages = find:
python_requires = >= 3.8
package_dir =
    = src
install_requires =
    requests >= 1.1.0, < 3
    requests-oauthlib >= 0.3.0, < 2
    python-dateutil>=2.8, < 3
    PyJWT >= 1.6.4, < 3 # This is required as part of oauthlib but doesn't seem to get included sometimes.
    cryptography>=1.3.1  # As above, but fixes issue with missing module imports not picked up for some reason.

[options.extras_require]
# Extras used by developers *of* pyxero are pinned to specific versions to
# ensure environment consistency.
dev =
    pre-commit == 3.0.2
    pytest == 7.2.1
    pytest-tldr == 0.2.5
    tox == 4.4.2

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests

[flake8]
exclude=\
    venv/*,\
    build/*,\
    dist/*,\
    local/*,\
    docs/*,\
    .eggs/*,\
    .tox/*
ignore = E203, E501, W503
max-line-length = 88

[isort]
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
extra_standard_library = mock,requests
known_first_party = xero
multi_line_output = 3
line_length = 88
indent = 4
include_trailing_comma = True
